improve synchronisation in banks refreshing data. Optimisation cycle. Change way to work with bank in GetInfo.java