@@ -6,37 +6,43 @@ import model.Bank;
 import model.Exchange;
 
 import java.lang.reflect.Type;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MonobankUtils extends Bank {
     private final static String URL = "https://api.monobank.ua/bank/currency";
+    public static final String COMMAND_NAME = "/setMonobank";
+    protected static final String BUTTON_TEXT = "Монобанк";
+    protected static final String COMMAND_RESULT_TEXT = "Курс в Монобанк";
+
     private final static Type typeToken = new TypeToken<List<MonoExchange>>() {
     }.getType();
-    private static List<Exchange> exchanges;
+    private static final List<Exchange> exchanges = new ArrayList<>();
 
     static {
         updateExchangeList();
     }
 
+    public MonobankUtils() {
+        super(COMMAND_NAME, BUTTON_TEXT, COMMAND_RESULT_TEXT);
+    }
+
     public static void updateExchangeList() {
         List<MonoExchange> monoExchanges = BankHttpUtils.getExchangeList(URL, typeToken);
-        exchanges = monoExchanges.stream().map(MonoExchange::getExchange).collect(Collectors.toList());
+        List<Exchange> exchangeList = monoExchanges.stream().map(MonoExchange::getExchange).toList();
+        synchronized (exchanges){
+            exchanges.clear();
+            exchanges.addAll(exchangeList);
+        }
     }
 
     @Override
     public List<Exchange> getExchangeList() {
-        return List.copyOf(exchanges);
-    }
-
-    @Override
-    public String getButtonCallbackData() {
-        return "/setMonobank";
-    }
-
-
-    public String toString() {
-        return "Monobank";
+        List<Exchange> exchangeList;
+        synchronized (exchanges){
+            exchangeList = List.copyOf(exchanges);
+        }
+        return exchangeList;
     }
 
 }
